Changed about me section text. Changed hero section text. Replaced stock logo with custom logo on the footer section.

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -10,6 +10,10 @@
     justify-content: space-between;
 }
 
+#footer-logo{
+    width: 140px;
+}
+
 .footer-topleft p{
     font-size: 20px;
     max-width: 400px;
